--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
+    "clsx": "^2.1.1",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.8.2",
     "lottie-react": "^2.4.1",
+    "motion": "^12.9.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.1",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^5.0.1",
+    "styled-components": "^6.1.17",
+    "tailwind-merge": "^3.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -61,6 +66,7 @@
     "babel-jest": "^29.7.0",
     "jest": "^27.5.1",
     "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.3"
   }
 }
