--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "projects": [ "EDA_GPT", 
     "Lung_Nodule_Detection_FRCNN_FPR",
-    "Rag-chat"
+    "Rag-chat" , "IBM_DATA_ANALYST"
   ],
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.13.4",
