--- a/package.json
+++ b/package.json
@@ -1,78 +1,35 @@
 {
-  "name": "my-portfolio",
-  "version": "0.1.0",
+  "name": "vite-react-typescript-starter",
   "private": true,
-  "projects": [ "EDA_GPT", 
-    "Lung_Nodule_Detection_FRCNN_FPR",
-    "Rag-chat"
-  ],
-  "dependencies": {
-    "@lottiefiles/dotlottie-react": "^0.13.4",
-    "@splinetool/react-spline": "^4.0.0",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "aos": "^2.3.4",
-    "axios": "^1.8.4",
-    "clsx": "^2.1.1",
-    "emailjs-com": "^3.2.0",
-    "framer-motion": "^12.8.2",
-    "lottie-react": "^2.4.1",
-    "motion": "^12.9.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^7.5.1",
-    "react-scripts": "5.0.1",
-    "react-simple-typewriter": "^5.0.1",
-    "styled-components": "^6.1.17",
-    "tailwind-merge": "^3.2.0",
-    "web-vitals": "^2.1.4"
-  },
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "jest",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "jest": {
-    "transform": {
-      "^.+\\.[t|j]sx?$": "babel-jest",
-      "^.+\\.(js|jsx|mjs)$": "babel-jest"
-    },
-    "transformIgnorePatterns": [
-      "/node_modules/(?!axios)/"
-    ]
+  "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "lucide-react": "^0.344.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.10",
-    "@babel/preset-env": "^7.26.9",
-    "@babel/preset-react": "^7.26.3",
-    "autoprefixer": "^10.4.21",
-    "axios-mock-adapter": "^2.1.0",
-    "babel-jest": "^29.7.0",
-    "jest": "^27.5.1",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^4.9.5"
+    "@eslint/js": "^9.9.1",
+    "@types/node": "^22.15.18",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.18",
+    "eslint": "^9.9.1",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.11",
+    "globals": "^15.9.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.3.0",
+    "vite": "^5.4.2"
   }
 }
